--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,9 @@ a {
 .border-r-5 {
   border-radius: 5%;
 }
+.border-r-5px {
+  border-radius: 50px;
+}
 .backg-lin-grad {
   background-image: linear-gradient(
     180deg,
