--- a/src/index.css
+++ b/src/index.css
@@ -148,3 +148,25 @@ a {
 .cur-pointer {
   cursor: pointer;
 }
+.border-none {
+  border: 0px !important;
+}
+.svg-icon {
+  /*display: inline-block;*/
+  width: 18px;
+  height: 18px;
+  vertical-align: text-bottom;
+}
+.navbar-icon-badge {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  color: black;
+  border-radius: 50%;
+  background: #d8baba;
+  font-size: 0.6rem;
+  line-height: 20px;
+}
