--- a/src/index.css
+++ b/src/index.css
@@ -200,3 +200,10 @@ a {
   background-color: white;
   border-radius: 10px;
 }
+.sticky {
+  transition: 0.5s ease;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
+}
