--- a/src/index.css
+++ b/src/index.css
@@ -210,3 +210,15 @@ a {
 .sticky + .content {
   padding-top: 102px;
 }
+.custom-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1055;
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+}
