--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5537,7 +5537,7 @@ fieldset:disabled .btn {
 .modal-dialog {
   position: relative;
   width: auto;
-  /*margin: 0.5rem;*/
+  margin: 0.5rem;
   pointer-events: none;
 }
 .modal.fade .modal-dialog {
