--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,14 @@ body {
   font-family: "Inter", sans-serif;
 }
 .landingBg {
-  background-image: url("/public/images/bgup.png");
+  background-image:linear-gradient(90deg, rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)), url("/public/images/vendorimage.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 100vh;
 }
 .landingBgMobile {
-  background-image: url("/public/images/bgup.png");
+  background-image:linear-gradient(90deg, rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)), url("/public/images/vendor-splash-image.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -32,45 +32,21 @@ a {
   background-image: "url(images/paperbackground.png)";
 }
 #bgVisibility {
-  background-image: linear-gradient(
-      180deg,
-      rgba(196, 196, 196, 0) 0%,
-      rgba(144, 144, 144, 0.265625) 21.88%,
-      rgba(96, 96, 96, 0.510417) 43.75%,
-      rgba(53, 53, 53, 0.729167) 61.98%,
-      #000000 100%
-    ),
-    url("/public/images/unsplash_VP5R-n47v9Q.png");
+  background-image: url("/public/illustrate/illustration\ \(6\).png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 30vh;
 }
 #bgBusiness {
-  background-image: linear-gradient(
-      180deg,
-      rgba(196, 196, 196, 0) 0%,
-      rgba(144, 144, 144, 0.265625) 21.88%,
-      rgba(96, 96, 96, 0.510417) 43.75%,
-      rgba(53, 53, 53, 0.729167) 61.98%,
-      #000000 100%
-    ),
-    url("/public/images/unsplash_business.png");
+  background-image: url("/public/illustrate/illustration\ \(3\).png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 30vh;
 }
 #bgCosturmers {
-  background-image: linear-gradient(
-      180deg,
-      rgba(196, 196, 196, 0) 0%,
-      rgba(144, 144, 144, 0.265625) 21.88%,
-      rgba(96, 96, 96, 0.510417) 43.75%,
-      rgba(53, 53, 53, 0.729167) 61.98%,
-      #000000 100%
-    ),
-    url("/public/images/unsplash_costurmers.png");
+  background-image: url("/public/illustrate/illustration\ \(1\).png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -439,6 +415,9 @@ line-height: 40px;
   height: 48px;
 }
 .fs-24{
+  font-size: 24px;
+}
+.fs-24-real{
   font-size: 24px;
 }
 @media (max-width: 768px) {
