ui updates on checkout

--- a/src/index.css
+++ b/src/index.css
@@ -280,6 +280,12 @@ a {
 .fs-20 {
   font-size: 20px;
 }
+.fs-22-r {
+  font-size: 22px;
+}
+.fs-24-r {
+  font-size: 24px;
+}
 .in-circle {
   background-color: #eee;
 }
